add logging to java command